# caviar

./: .ai-context  .driveignore  .gitattributes  .gitignore  .mcp.json  .mcp.json.bulletproof  .uvicornignore  0.1.0  0.99  ACTION_15_MINUTES.bat  ACTIVATE_TORI.bat  ACTIVATE_TORI.ps1  ADVANCED_SOLITON_FEATURES_COMPLETE.md  AGGRESSIVE-ORGANIZE.ps1  AI_QUICK_REFERENCE.md  ALBERT_SPRINT_READY.md  APPLY_TRACE_FIXES.bat  AUDIT_RESPONSE_SUMMARY.md  Add-PermissionsToast.ps1  Audit-CaviarCatchup.ps1  BARE_METAL_DEPLOYMENT_GUIDE.md  BARE_METAL_SUMMARY.md  BDG_INTEGRATION_COMPLETE.md  BDG_UPGRADE_DOCUMENTATION.md  BEYOND_METACOGNITION_COMPLETE.md  BEYOND_METACOGNITION_STATUS.json  BEYOND_QUICKSTART.md  BRAIDMEMORY_INTEGRATION_COMPLETE.md  BRAID_MEMORY_CONNECTION_GUIDE.md  BRAID_MEMORY_EXACT_INTEGRATION.md  BUILD_AND_DEPLOY_TORI_CHAT.md  BUILD_PENROSE.bat  BUILD_PENROSE.ps1  BUILD_PENROSE_ENGINE.bat  BUILD_PENROSE_NO_BLAS.bat  BULLETPROOF_CONNECTION_FIXES_COMPLETE.md  BULLETPROOF_PENROSE_BUILD.bat  BULLETPROOF_PENROSE_BUILD.ps1  BULLETPROOF_TORI_IMPROVEMENTS_COMPLETE.md  CAPSBUILD_README.md  (+1210 more)
alan_backend/: .pre-commit-config.yaml  ADD_SOLITON_TO_API.txt  BRAID_AGGREGATOR_ADVANCED.md  BRAID_AGGREGATOR_PATCHES.md  BRAID_COMPARISON.md  INTEGRATION_STATUS_REPORT.md  Makefile  NODB_MIGRATION_PLAN.md  README.md  __init__.py  _version.py  apply_all_braid_patches.py  apply_code_review_fixes.py  braid_aggregator.py  braid_aggregator_modified.py  chaos_channel_controller.py  chaos_channel_controller_modified.py  config.py  demo_braid_patches.py  eigensentry_guard.py  eigensentry_guard_modified.py  lyap_exporter.py  migrate_to_nodb.py  migrate_to_nodb_ast.py  origin_sentry.py  origin_sentry_modified.py  patch_braid_aggregator.py  patch_braid_aggregator_advanced.py  pyproject.toml  remove_alan_backend_db.py  test_nodb_migration.py  validate_nodb_final.py
alan_backend/banksy/: PSI_SYNC_IMPLEMENTATION_SUMMARY.md  README_PSI_SYNC.md  __init__.py  alan_psi_sync_bridge.py  banksy_spin.py  broadcast.py  clock.py  config.yaml  psi_koopman_integration.py  psi_sync_demo.py  psi_sync_monitor.py  quantum_bridge.py  run_psi_sync_tests.bat  run_psi_sync_tests.py
alan_backend/core/: banksy_fusion.py  demo_banksy_alan.py  elfin_bridge.py
alan_backend/elfin/: BENCHMARK_SUITE_OVERVIEW.md  CHANGELOG.md  README.md  STABILITY_FRAMEWORK_README.md  __init__.py  check_circular_refs.py  cli.py  elfin_check.py  import_processor.py  run_benchmarks.bat  run_constant_folding_demo.py  run_dashboard_demo.bat  run_direct_parallel_demo.bat  run_error_tools.bat  run_integration_demo.bat  run_neural_lyapunov_demo.bat  run_parallel_demo.bat  run_stability_agent_demo.bat  run_stability_demo.bat  run_stability_sanity_checks.bat  run_stability_tests.bat  run_standalone_demo.bat  setup.py  standalone_demo.py  standalone_parser.py  test_exit_code.bat  test_import_processor.py  test_no_errors.bat
alan_backend/metacog/: reflection_fixed_point.py
alan_backend/planner/: barrier_planner.py  cli.py  demo_barrier_planner.py  goal_graph.py  guards.py
alan_backend/routes/: debate.py  personas.py  soliton.py
alan_backend/scripts/: add_header.py  check_avx512.py
alan_backend/server/: simulation_api.py
alan_backend/snapshot/: __init__.py  compression.py  snapshot.fbs  snapshot_serializer.py
concept_mesh/: .gitignore  Cargo.toml  README.md  __init__.py  import_fix.py  interface.py  loader.py  mesh_types.py  pyproject.toml  setup.py
concept_mesh/penrose_rs/: Cargo.toml  README.md  pyproject.toml  test_build.py
concept_mesh/similarity/: __init__.py
concept_mesh/src/: cbd.rs  chi_laplacian.rs  comfort_analysis.rs  concept_trail.rs  concept_trail.rs.backup  diff.rs  ffi_bridge.rs  lattice_topology.rs  lattice_topology_3d.rs  lcn.rs  lib.rs  mesh_legacy.rs  psiarc_legacy.rs  soliton_memory.rs  soliton_memory_modified.rs
concept_mesh/tests/: user_attribution_test.rs
elfin_lsp/: ELFIN BEGINS.txt  README.md  mcppdfintegrationplan.txt  pyproject.toml  setup.py
elfin_lsp/elfin files/: aerial_vehicle_controller.elfin  constant_folding_test.elfin  constants.elfin  control.elfin  controller.elfin  distance.elfin  helpers.elfin  hybrid_controller.elfin  indirect_circular.elfin  linear.elfin  main.elfin  manipulator_controller.elfin  matrix.elfin  mobile_robot_controller.elfin  pid.elfin  quadrotor.elfin  quadrotor_controller.elfin  robot.elfin  simple_debug.elfin  simple_system.elfin  system_with_missing_helper.elfin  system_with_units.elfin  test_hover.elfin  test_with_errors.elfin  test_without_errors.elfin  vector.elfin
elfin_lsp/elfin_lsp/: __init__.py  cli.py  protocol.py  server.py
elfin_lsp/tests/: __init__.py  conftest.py  test_code_action.py  test_codelens.py  test_inlay.py  test_lsp_definition.py  test_lsp_diag.py  test_lsp_hover.py
improved_memory_vault/: IMPLEMENTATION_SUMMARY.md  README.md  benchmark.py  integration.py  memory_vault_v2.py  migrate.py  pyproject.toml  requirements.txt  test_memory_vault_v2.py
mcp_metacognitive/: README.md  __init__.py  config.py  diagnose_fastmcp.py  enhanced_launcher.py  fastmcp.py  install_dependencies.py  main.py  pyproject.toml  run_mcp_sse.ps1  run_production_server.py  server.py  server.py.backup_run_fix  server_direct_fix.py  server_fallback.py  server_fixed.py  server_integrated.py  server_proper.py  server_simple.py  server_simple_fixed.py  servers.json  start_complete_system.py
mcp_metacognitive/agents/: KAIZEN_ENHANCEMENTS.md  kaizen.py  kaizen_config.py  kaizen_enhancements.py  kaizen_metrics.py
mcp_metacognitive/core/: __init__.py  agent_registry.py  config.py  dynamic_discovery.py  psi_archive.py  real_tori_bridge.py  soliton_memory.py  soliton_memory.py.backup2  soliton_memory.py.backup_1752705852.4314182  (+3 more)
prajna/: COGNITIVE_REASONING_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  README.md  __init__.py  concept_mesh_data.json  concept_mesh_data.json.bak  launch_prajna.py  prajna_api.py  prajna_simple.py  psi_trajectory.json  psi_trajectory.json.bak  pyproject.toml  quick_start.bat  quick_start.sh  requirements.txt  soliton_concept_memory.json  start_prajna.py  test_prajna.py
(+3442 files in other folders)
