[tool.poetry]
name = "tori-kha"
version = "0.9.6"
description = "TORI Knowledge Harmonization Architecture - A multi-modal cognitive system"
authors = ["TORI Team"]
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
packages = [
    { include = "concept_mesh" },
    { include = "ingest_pdf" },
    { include = "prajna" },
    { include = "python" },
    { include = "api" },
    { include = "mcp_metacognitive" }
]

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies
fastapi = "0.115.12"
uvicorn = "0.34.2"
pydantic = "2.11.7"
numpy = ">=1.26.4,<2.3.0"
scipy = ">=1.10.0"
scikit-learn = "1.7.0"

# PDF processing
pypdf2 = "3.0.1"

# API and networking
httpx = "0.28.1"
sse-starlette = "2.2.1"
python-multipart = "0.0.20"
aiofiles = "24.1.0"
websockets = "15.0.1"

# Utilities
python-dotenv = "1.1.0"
psutil = "7.0.0"
requests = "2.32.3"

# Data processing
pandas = "2.2.3"
deepdiff = ">=6.7"
nltk = "3.9.1"
msgpack = "^1.1.1"
mcp = "1.6.0"
python-docx = "1.1.2"
openai-whisper = "20240930"
opencv-python = "^4.12.0.88"
moviepy = "^2.2.1"
accelerate = "1.8.1"
aiohappyeyeballs = "2.6.1"
aiohttp = "3.11.16"
aiosignal = "1.3.2"
altair = "5.5.0"
annotated-types = "0.7.0"
anyio = "4.9.0"
arxiv = "2.2.0"
asgiref = "3.9.1"
astor = "0.8.1"
attrs = "25.3.0"
auto-gptq = "0.7.1"
av = "10.0.0"
beautifulsoup4 = "4.13.4"
bitsandbytes = "0.46.1"
blinker = "1.9.0"
blis = "0.7.11"
cachetools = "5.5.2"
catalogue = "2.0.10"
cattrs = "24.1.3"
certifi = "2025.1.31"
cffi = "1.17.1"
chardet = "5.2.0"
charset-normalizer = "3.4.1"
click = "8.1.8"
cloudpathlib = "0.21.1"
colorama = "0.4.6"
confection = "0.1.5"
conllu = "6.0.0"
contourpy = "1.3.2"
coverage = "7.8.0"
cryptography = "44.0.2"
cycler = "0.12.1"
cymem = "2.0.11"
dash = "3.0.4"
dataclasses-json = "0.6.7"
datasets = "3.6.0"
dill = "0.3.8"
diskcache = "5.6.3"
distro = "1.9.0"
docopt = "0.6.2"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.7.0/en_core_web_lg-3.7.0-py3-none-any.whl"}
feedparser = "6.0.11"
filelock = "3.18.0"
flake8 = "7.2.0"
flask = "3.0.3"
flatbuffers = "25.2.10"
fonttools = "4.57.0"
frozenlist = "1.6.0"
fsspec = "2025.3.0"
gekko = "1.3.0"
gitdb = "4.0.12"
gitpython = "3.1.44"
googleapis-common-protos = "1.70.0"
gputil = "1.4.0"
graphviz = "0.20.3"
greenlet = "3.2.0"
grpcio = "1.73.1"
gudhi = "3.9.0"
h11 = "0.14.0"
h5py = "3.13.0"
hdbscan = "0.8.40"
hf-xet = "1.1.5"
httpcore = "1.0.8"
httptools = "0.6.4"
httpx-sse = "0.4.0"
huggingface-hub = "0.33.1"
idna = "3.10"
imageio = "2.37.0"
importlib-metadata = "8.6.1"
iniconfig = "2.1.0"
inquirerpy = "0.3.4"
itsdangerous = "2.2.0"
jellyfish = "1.2.0"
jinja2 = "3.1.6"
jiter = "0.9.0"
joblib = "1.4.2"
js2py = "0.74"
jsonpatch = "1.33"
jsonpointer = "3.0.0"
jsonschema = "4.23.0"
jsonschema-specifications = "2025.4.1"
jsonschema-pydantic = "0.6"
keybert = "0.9.0"
kiwisolver = "1.4.8"
langchain = "0.3.23"
langchain-community = "0.3.21"
langchain-core = "0.3.54"
langchain-openai = "0.3.14"
langchain-text-splitters = "0.3.8"
langcodes = "3.5.0"
langsmith = "0.3.32"
language-data = "1.3.0"
lark = "1.2.2"
llvmlite = "0.44.0"
lsprotocol = "2023.0.1"
lxml = "5.4.0"
marisa-trie = "1.2.1"
markdown-it-py = "3.0.0"
markupsafe = "3.0.2"
marshmallow = "3.26.1"
matplotlib = "3.10.1"
maturin = "1.9.1"
mccabe = "0.7.0"
mdurl = "0.1.2"
more-itertools = "10.7.0"
mpmath = "1.3.0"
multidict = "6.4.3"
multiprocess = "0.70.16"
mypy = "1.15.0"
mypy-extensions = "1.0.0"
narwhals = "1.36.0"
nest-asyncio = "1.6.0"
nmslib-metabrainz = "2.1.3"
numba = "0.61.2"
openai = "1.75.0"
opencv-python-headless = "^4.10.0"
opentelemetry-api = "1.34.1"
opentelemetry-exporter-otlp = "1.34.1"
opentelemetry-exporter-otlp-proto-common = "1.34.1"
opentelemetry-exporter-otlp-proto-grpc = "1.34.1"
opentelemetry-exporter-otlp-proto-http = "1.34.1"
opentelemetry-instrumentation = "0.55b1"
opentelemetry-instrumentation-asgi = "0.55b1"
opentelemetry-instrumentation-asyncio = "0.55b1"
opentelemetry-instrumentation-fastapi = "0.55b1"
opentelemetry-instrumentation-httpx = "0.55b1"
opentelemetry-instrumentation-logging = "0.55b1"
opentelemetry-proto = "1.34.1"
opentelemetry-sdk = "1.34.1"
opentelemetry-semantic-conventions = "0.55b1"
opentelemetry-util-http = "0.55b1"
optimum = "1.26.1"
orjson = "3.10.16"
packaging = "24.2"
pathvalidate = "3.3.1"
pdf2image = "1.17.0"
pdfminer-six = "20250327"
pdfplumber = "0.11.6"
peft = "0.15.2"
penrose-engine-rs = {path = "C:/Users/jason/Desktop/tori/kha/concept_mesh/penrose_rs/target/wheels/penrose_engine_rs-0.1.1-cp311-cp311-win_amd64.whl"}
pfzy = "0.3.4"
pillow = "11.2.1"
pipwin = "0.5.2"
plotly = "6.0.1"
pluggy = "1.5.0"
prometheus-fastapi-instrumentator = "7.1.0"
prometheus-client = "0.22.0"
prompt-toolkit = "3.0.51"
propcache = "0.3.1"
protobuf = "5.29.4"
py-cpuinfo = "9.0.0"
pyarrow = "20.0.0"
pybind11 = "3.0.0"
pycodestyle = "2.13.0"
pycparser = "2.22"
pydantic-settings = "2.9.1"
pydantic-core = "2.33.2"
pydeck = "0.9.1"
pydub = "0.25.1"
pyflakes = "3.3.2"
pygls = "1.3.1"
pygments = "2.19.1"
pyjsparser = "2.7.1"
pyjwt = "2.10.1"
pymupdf = "1.25.5"
pynndescent = "0.5.13"
pyparsing = "3.2.3"
pypdfium2 = "4.30.1"
pyprind = "2.11.3"
pysbd = "0.3.4"
pysmartdl = "1.3.4"
pytesseract = "0.3.13"
pytest = "8.3.5"
pytest-asyncio = "0.26.0"
pytest-benchmark = "5.1.0"
pytest-cov = "6.1.1"
python-dateutil = "2.9.0.post0"
pytigergraph = "1.8.6"
pytz = "2025.2"
pyyaml = "6.0.2"
redis = "5.2.1"
referencing = "0.36.2"
regex = "2024.11.6"
reportlab = "4.4.0"
requests-toolbelt = "1.0.0"
retrying = "1.3.4"
rich = "14.0.0"
rouge = "1.0.1"
rpds-py = "0.24.0"
rwkv = "0.8.28"
safetensors = "0.5.3"
scispacy = "0.5.5"
seaborn = "0.13.2"
segtok = "1.5.11"
sentence-transformers = "5.0.0"
sentencepiece = "0.2.0"
sgmllib3k = "1.0.0"
shellingham = "1.5.4"
six = "1.17.0"
smart-open = "7.1.0"
smmap = "5.0.2"
sniffio = "1.3.1"
soupsieve = "2.7"
spacy = "3.7.5"
spacy-entity-linker = "1.0.3"
spacy-legacy = "3.0.12"
spacy-loggers = "1.0.5"
sqlalchemy = "2.0.40"
starlette = "0.46.2"
streamlit = "1.44.1"
streamlit-chat-widget = "0.2.0"
sympy = "1.13.3"
tabulate = "0.9.0"
tenacity = "9.1.2"
threadpoolctl = "3.6.0"
tiktoken = "0.9.0"
tokenizers = "0.21.1"
toml = "0.10.2"
torchdiffeq = "0.2.5"
torchvision = "0.22.0"
tornado = "6.4.2"
tqdm = "4.67.1"
transformers = "4.53.1"
typer = "0.16.0"
typing-inspect = "0.9.0"
typing-inspection = "0.4.0"
typing-extensions = "4.13.2"
tzdata = "2025.2"
tzlocal = "5.3.1"
umap-learn = "0.5.7"
urllib3 = "2.4.0"
validators = "0.34.0"
wasabi = "1.1.3"
watchdog = "6.0.0"
watchfiles = "1.1.0"
wcwidth = "0.2.13"
weasel = "0.4.1"
werkzeug = "3.0.6"
whisper = "1.1.10"
wrapt = "1.17.2"
xxhash = "3.5.0"
yake = "0.4.8"
yarl = "1.20.0"
zipp = "3.21.0"
zstandard = "0.23.0"
elfin-lsp = {path = "elfin_lsp", develop = true}

[tool.poetry.group.dev.dependencies]
# Build / packaging
maturin = ">=1.5"
setuptools = ">=61.0"
wheel = "*"

# Document extraction
yake = ">=0.4"
keybert = "*"
sentence-transformers = "*"
spacy = ">=3.7"
# entropy-prune = ">=0.2"  # Commented out - use TORI_DISABLE_ENTROPY_PRUNE=1 instead

# OCR (optional)
pytesseract = "*"
pdf2image = "*"
pillow = "*"

# Testing
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
pytest-cov = "*"

# Code quality
black = "*"
ruff = "*"
pre-commit = "*"

# Additional tools
reportlab = ">=3.6"

[tool.poetry.group.ml]
optional = true

[tool.poetry.group.ml.dependencies]
torch = ">=2.0.0"
transformers = ">=4.35.0"

[tool.poetry.group.mcp]
optional = true

[tool.poetry.group.mcp.dependencies]
mcp = ">=1.0.0"
fastmcp = ">=0.1.0"

[tool.poetry.urls]
"Homepage" = "https://github.com/yourusername/tori-kha"
"Bug Tracker" = "https://github.com/yourusername/tori-kha/issues"

[tool.poetry.scripts]
tori = "enhanced_launcher:main"
tori-api = "prajna.api.prajna_api:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --tb=short"

# Note: Use packages field above for including Python packages
# Additional files are included by default (README.md, etc.)
