[package]
name = "concept_mesh"
version = "0.1.0"
edition = "2021"

[lib]
name = "concept_mesh_rs"  # this becomes the Python module name
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18", features = ["extension-module"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
lazy_static = "1.4"
