[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "improved-memory-vault"
version = "0.1.0"
description = "Memory Vault V2 - Production-ready async memory system"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "numpy>=1.21.0",
    "aiofiles>=23.0.0",
    "msgpack>=1.0.5",
    "psutil>=5.9.0",
    "matplotlib>=3.6.0",
]

[tool.setuptools]
py-modules = ["memory_vault_v2", "integration"]
