[project]
name = "tori-metacognitive-mcp"
version = "0.2.0"
description = "MCP server for TORI Metacognitive Engine with Phase 2 Components"
requires-python = ">=3.10"
readme = "README.md"
authors = [
    { name = "TORI Framework Team" }
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.1.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "scikit-learn>=1.3.0",
    "aiofiles>=23.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "uvicorn>=0.24.0",
    "fastapi>=0.104.0",
    "asyncio>=3.4.3",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "flower>=2.0.0",
    "psutil>=5.9.0",
    "openai>=1.0.0",
    "anthropic>=0.7.0",
]

[project.optional-dependencies]
ai = [
    "transformers>=4.35.0",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.build]
include = [
    "*.py",
    "core/**/*.py",
    "agents/**/*.py",
    "extensions/**/*.py",
    "tools/**/*.py",
    "prompts/**/*",
    "resources/**/*",
    "servers.json",
]

[project.scripts]
tori-mcp = "server:main"
tori-complete = "start_complete_system:main"

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]