[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "prajna"
version = "0.1.0"
description = "Prajna - TORI's Voice and Language Model"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "networkx>=3.2",
]

[tool.setuptools]
packages = ["core", "memory", "api"]
