[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-metacognitive-webview"
version = "0.1.0"
description = "MCP Metacognitive Web Interface"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "Your Name"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "prometheus-client>=0.19.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "asyncio-throttle>=1.0.2",
    "backoff>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "celery>=5.3.0",
]

[tool.setuptools]
py-modules = ["run_web", "run_web_simple"]
